# Master-Thesis

./: .gitattributes  .gitignore  LICENSE  morpheus_isaac.usd  run_morpheus_all.sh  structure.txt
MarsYard2024/: marsyard.blend  marsyard_reduced.mtl  marsyard_reduced.usd  marsyard_reduced_16k.usd  test_fine.usdc  texturedMesh - MY_2024_FINAL.obj.mtl
MarsYard2024/configuration/: marsyard_reduced_base.usd  marsyard_reduced_physics.usd  marsyard_reduced_sensor.usd
morpheus_ws/src/morpheus_control/: CMakeLists.txt  package.xml
morpheus_ws/src/morpheus_control/launch/: morpheus_control.launch.py
morpheus_ws/src/morpheus_control/scripts/: morpheus_control.py
morpheus_ws/src/morpheus_description/: CMakeLists.txt  package.xml
morpheus_ws/src/morpheus_description/urdf/: robot.urdf  robot.xacro
morpheus_ws/src/morpheus_description/urdf/01_robot_description/: morpheus_isaac.urdf  robot_description.macro.xacro
morpheus_ws/src/morpheus_description/urdf/01_robot_description/meshes/dae/: elbow.dae  gripper_left.dae  gripper_right.dae  os0_lidar.dae  shaft.dae  shoulder.dae  steering.dae  strut.dae  wheel.dae  wrist_1.dae  wrist_2.dae
morpheus_ws/src/morpheus_description/urdf/01_robot_description/meshes/stl/: ZED2i.stl  ZEDM.stl  arm_base.stl  elbow.stl  gripper_left.stl  gripper_right.stl  os0_lidar.stl  sample_box.stl  shaft.stl  shoulder.stl  steering.stl  strut.stl  wheel.stl  wrist_1.stl  wrist_2.stl  wrist_3.stl
morpheus_ws/src/morpheus_description/urdf/03_ros2_control/: morpheus_control.yaml
morpheus_ws/src/morpheus_description/urdf/04_templates/: base_link.macro.xacro  base_link.template.xacro  gazebo.new.xacro  gazebo.template.xacro  robot_description.new.xacro  robot_description.template.xacro  ros2_control.new.xacro  ros2_control.template.xacro
morpheus_ws/src/morpheus_description/urdf/05_save_files/morpheus_simplified/: gazebo.xacro  robot_description.xacro  ros2_control.xacro
morpheus_ws/src/morpheus_description/user_interface/: config_dialog.ui  default.rviz  gui.py  gui.ui  readMe.txt
morpheus_ws/src/morpheus_description/user_interface/config/: default.rviz  urdf_import.rviz
morpheus_ws/src/morpheus_description/user_interface/gazebo_sensors/: gazebo_sensors.py
morpheus_ws/src/morpheus_description/user_interface/robot_description/: robot_description.py
morpheus_ws/src/morpheus_description/user_interface/ros2/: ros2_tools.py
morpheus_ws/src/morpheus_description/user_interface/ros2_control/: gui.py  ros2_control.py
morpheus_ws/src/morpheus_description/user_interface/urdf_import/: urdf_importer.py
morpheus_ws/src/morpheus_nav2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
morpheus_ws/src/morpheus_nav2/config/: ekf.yaml  ekf_odom.yaml  map.yaml  nav2_params.yaml  teleop_joy.yaml  tmp_ekf.yaml  twist_mux.yaml
morpheus_ws/src/morpheus_nav2/launch/: bringup_nav2.launch.py  map_server_standalone.launch.py  navigation_launch.py
morpheus_ws/src/morpheus_nav2/scripts/: gen_map_from_dem.py  nav2_kinematics_controller.py
morpheus_ws/src/morpheus_simulation/: CMakeLists.txt  package.xml
morpheus_ws/src/morpheus_simulation/worlds/: empty_world.sdf  (+1 more)
(+12 files in other folders)
